fix after second review

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                       <label for="url-input">Ссылка RSS</label>
                     </div>
                     <div class="col-auto">
-                      <button type="submit" aria-label="add" class="h-100 btn btn-lg btn-primary px-sm-5">
+                      <button id="button" type="submit" aria-label="add" class="h-100 btn btn-lg btn-primary px-sm-5">
                         Добавить
                       </button>
                     </div>
